# ctf-platform

./: .dockerignore  .eslintrc.cjs  .flake8  .gitignore  Dockerfile  README.md  backend.Dockerfile  compose.local.yml  compose.prod-like.yml  compose.yml  entrypoint.backend.sh  entrypoint.frontend.sh  frontend.Dockerfile  index.html  manage.py  nginx-app.conf  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  uwsgi.ini  vite.config.ts
.github/workflows/: build-and-push.yml
client/components/CompetitionsTemplate/: CompetitionCard.tsx  CompetitionTaskCard.tsx
client/context/: competitionTasksContext.tsx
client/layouts/: BaseLayout.tsx  CompetitionLayout.tsx  SiteLayout.tsx
client/styles/: generated.css  global.css  tailwind-input.css
client/templates/: CompetitionAboutTemplate.tsx  CompetitionTasksTemplate.tsx  CompetitionsTemplate.tsx  LandingPageTemplate.tsx  LoginTemplate.tsx  SingleCompetitionTemplate.tsx
ctf_platform_backend/: asgi.py  settings.py  urls.py  wsgi.py
ctf_platform_backend/api/: admin.py  apps.py  forms.py  models.py  serializers.py  templates.py  urls.py  views.py
ctf_platform_backend/api/migrations/: 0001_initial.py  0002_competitiontaskfile.py
ctf_platform_backend/api_auth/: apps.py  serializers.py  urls.py  views.py
frontend/: App.tsx  environment.ts  fetchUtils.ts  router.tsx
frontend/components/common/: CompetitionLayout.tsx  ProtectedRoute.tsx  RootLayout.tsx
frontend/hooks/: useCurrentPath.tsx
frontend/pages/: CompetitionsPage.tsx
frontend/pages/auth/: Logout.tsx  (+1 more)
frontend/styles/: global.css
(+8 files in other folders)
